--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,8 +1,8 @@
 name: cd
 on:
   push:
-    # tags:
-    # - "v[0-9]+.[0-9]+.[0-9]+"
+    tags:
+    - "v[0-9]+.[0-9]+.[0-9]+"
 
 env:
   REGISTRY: ghcr.io
